# codeflow

./: .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml  requirements.txt
docs/design/: design.md
docs/design/reference/mas-main/: CLAUDE.md
examples/: day2_demo.py  day3_demo.py  day6_eval.py
src/: __init__.py  config.py
src/agents/: __init__.py  coding_agent.py  design_agent.py  notes_agent.py  prompts.py  review_agent.py
src/cli/: __init__.py  __main__.py
src/eval/: __init__.py  harness.py
src/integrations/: __init__.py  github_client.py  jira_client.py  vcs.py
src/models/: __init__.py  base.py  google_client.py
src/orchestration/: __init__.py  context.py  run_store.py  steps.py  workflow_engine.py
tests/: __init__.py  test_agents.py  test_config.py  test_eval_harness.py  test_integrations.py  test_run_store.py  test_workflow.py  test_workflow_with_agents.py
